<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equation_choice_question"
        android:textSize="16sp"/>

    <RadioGroup
        android:id="@+id/equationRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/equationRadioXSquared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parabola_equation"
            android:onClick="xSquaredEquation"/>
        <RadioButton
            android:id="@+id/equationRadioNormalCurve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standard_normal_equation"
            android:onClick="normalCurveEquation"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/x_bounds_question"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_lower_bound"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/x_lower_bound_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/x_lower_bound_hint"
            android:inputType="numberDecimal"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_upper_bound"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/x_upper_bound_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/x_upper_bound_hint"
            android:inputType="numberDecimal"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_lower_bound"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/y_lower_bound_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/y_lower_bound_hint"
            android:inputType="numberDecimal"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_upper_bound"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/y_upper_bound_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/y_upper_bound_hint"
            android:inputType="numberDecimal"
            android:textSize="12sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_points_question"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_to_sample"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/num_sample_points_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/points_to_sample_hint"
            android:inputType="number"
            android:textSize="12sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_approximate_area"
        android:layout_marginTop="8dp"
        android:onClick="approximateArea"/>

    <TextView
        android:id="@+id/answerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"/>
</LinearLayout>